Add dependency and affiliation network

--- a/notebooks/01-data_transformation.ipynb
+++ b/notebooks/01-data_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "from dateutil.parser import parse\n",
     "from dateutil.relativedelta import relativedelta\n",
     "from neo4j import GraphDatabase\n",
-    "from tqdm import tqdm"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,14 +143,90 @@
     "\n",
     "        results = session.run(query, versions=version_ids).data()\n",
     "\n",
-    "        # if bool(results):\n",
-    "        #     dependencies = pd.DataFrame.from_dict(results)\n",
-    "        # else:\n",
-    "        #     dependencies = pd.DataFrame(columns=['source', 'target', 'type', 'created'])\n",
     "        dependencies = pd.DataFrame.from_dict(results)\n",
     "        dependencies['created'] = pd.to_datetime(dependencies['created'])\n",
     "\n",
     "    return dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_developers(driver, repository, start, end):\n",
+    "    \"\"\"Queries participating developers for repositories from database.\n",
+    "\n",
+    "    Retrieves the participating of for each repositories\n",
+    "    in list of IDs.\n",
+    "\n",
+    "    Args:\n",
+    "        driver: Neo4j database connection's driver.\n",
+    "        repository: Repository IDs.\n",
+    "    \n",
+    "    Returns:\n",
+    "        A pandas DataFrame containing the participating users for\n",
+    "        a repository. Each row represents a developers with the attributes\n",
+    "        'XXX', 'XXX', 'XXX', and 'XXX'.\n",
+    "    \"\"\"\n",
+    "    with driver.session(database='main') as session:\n",
+    "        query_comments = \"\"\"\n",
+    "            MATCH (u:User)-[p:POSTED]->(c:Comment)-[*2]->(r:Repository)\n",
+    "            WHERE r.name = toString($repository)\n",
+    "            AND c.created >= datetime($start)\n",
+    "            AND c.created < datetime($end)\n",
+    "            AND u.type <> \"Bot\"\n",
+    "            RETURN DISTINCT u.login AS login\n",
+    "            \"\"\"\n",
+    "                \n",
+    "        query_issues = \"\"\"\n",
+    "            MATCH (u:User)-[a]->(:Issue)-[:RELATED_TO]->(r:Repository)\n",
+    "            WHERE r.name = toString($repository)\n",
+    "            AND a.created >= datetime($start)\n",
+    "            AND a.created < datetime($end)\n",
+    "            AND u.type <> \"Bot\"\n",
+    "            RETURN DISTINCT u.login AS login\n",
+    "            \"\"\"\n",
+    "\n",
+    "        query_pullreq = \"\"\"\n",
+    "            MATCH (u:User)-[a]->(:PullRequest)-[:RELATED_TO]->(r:Repository)\n",
+    "            WHERE r.name = toString($repository)\n",
+    "            AND a.created >= datetime($start)\n",
+    "            AND a.created < datetime($end)\n",
+    "            AND u.type <> \"Bot\"\n",
+    "            RETURN DISTINCT u.login AS login\n",
+    "            \"\"\"\n",
+    "\n",
+    "        query_commits = \"\"\"\n",
+    "            MATCH (u:User)-[a]->(:Commit)-[:RELATED_TO]->(r:Repository)\n",
+    "            WHERE r.name = toString($repository)\n",
+    "            AND a.created >= datetime($start)\n",
+    "            AND a.created < datetime($end)\n",
+    "            AND u.type <> \"Bot\"\n",
+    "            RETURN DISTINCT u.login AS login\n",
+    "            \"\"\"\n",
+    "\n",
+    "        results_comments = session.run(\n",
+    "            query_comments, repository=repository, start=start, end=end).data()\n",
+    "        results_issues = session.run(\n",
+    "            query_issues, repository=repository, start=start, end=end).data()\n",
+    "        results_pullreq = session.run(\n",
+    "            query_pullreq, repository=repository, start=start, end=end).data()\n",
+    "        results_commits = session.run(\n",
+    "            query_commits, repository=repository, start=start, end=end).data()\n",
+    "\n",
+    "        comments = pd.DataFrame.from_dict(results_comments)        \n",
+    "        issues = pd.DataFrame.from_dict(results_issues)\n",
+    "        pullreqs = pd.DataFrame.from_dict(results_pullreq)\n",
+    "        commits = pd.DataFrame.from_dict(results_commits)\n",
+    "\n",
+    "        developers = pd.concat([comments, issues, pullreqs, commits], axis=0)\n",
+    "        developers.drop_duplicates(subset=['login'], inplace=True)\n",
+    "        developers.reset_index(inplace=True)\n",
+    "        developers['repo_name'] = repository\n",
+    "\n",
+    "    return developers.to_dict(orient='records')"
    ]
   },
   {
@@ -162,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,17 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8108/8108 [00:10<00:00, 783.74it/s]\n",
-      "100%|██████████| 8141/8141 [00:10<00:00, 770.58it/s]\n",
-      "100%|██████████| 8180/8180 [00:09<00:00, 830.40it/s]\n",
-      "100%|██████████| 8208/8208 [00:10<00:00, 761.68it/s]\n"
+      "100%|██████████| 8108/8108 [00:10<00:00, 760.62it/s]\n",
+      "100%|██████████| 8141/8141 [00:10<00:00, 744.30it/s]\n",
+      "100%|██████████| 8180/8180 [00:11<00:00, 732.24it/s]\n",
+      "100%|██████████| 8208/8208 [00:10<00:00, 797.25it/s]\n"
      ]
     }
    ],
@@ -267,23 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dependencies = get_dependencies(driver, data[1]['version_id'].tolist())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:05<00:00,  1.37s/it]\n"
+      "100%|██████████| 4/4 [00:05<00:00,  1.31s/it]\n"
      ]
     }
    ],
@@ -362,6 +429,119 @@
     "        am = adj.to_numpy()\n",
     "        np.savetxt('../data/net{0}-gof.txt'.format(i+1), am, fmt='%s')\n",
     "\n",
+    "        pbar.update()\n",
+    "    pbar.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Affiliation Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d757536511fd48bf977e40ad89067e58",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4da7bf52a16c4f2395651c10c09e7af6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8108 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7e809e499efe483c97f3693c3f9dca78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8141 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82d70f21e7ad4b6fb7d957e27bc61e1f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8180 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05ba5ba3b4de460fb5cd2529074e6218",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8208 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create affiliation networks for each observation\n",
+    "affiliation_networks = []\n",
+    "\n",
+    "with tqdm(total=len(observations)) as pbar:\n",
+    "    for i, obs in enumerate(observations):\n",
+    "        repo_names = data[i]['repo_name'].tolist()\n",
+    "        developers = []\n",
+    "        for repo in tqdm(repo_names, leave=False):\n",
+    "            if i == 0:\n",
+    "                devs = get_developers(driver, repo, OBSERVATION_START, obs)\n",
+    "            else:\n",
+    "                devs = get_developers(driver, repo, observations[i-1], observations[i])\n",
+    "            developers.extend(devs)\n",
+    "\n",
+    "        df_devs = pd.DataFrame.from_records(developers)\n",
+    "        nodelist = df_devs['login'].unique().tolist()\n",
+    "        edgelist = list(zip(df_devs['login'], df_devs['repo_name']))\n",
+    "\n",
+    "        G = nx.DiGraph()\n",
+    "        G.add_nodes_from(nodelist)\n",
+    "        G.add_nodes_from(repo_names)\n",
+    "        G.add_edges_from(edgelist)\n",
+    "        affiliation_networks.append(G)\n",
+    "        nx.write_gpickle(G, '../data/affiliation_network-{0}.pkl'.format(obs))\n",
+    "        nx.write_gml(G, '../data/affiliation_network-{0}.gml'.format(obs))\n",
     "        pbar.update()\n",
     "    pbar.close()"
    ]
