--- a/R/siena.Rmd
+++ b/R/siena.Rmd
@@ -14,15 +14,17 @@ library(network)
 library(sna)
 library(intergraph)
 library(RSiena)
+library(patchwork)
+library(texreg)
 # setwd("/Users/mariomueller/Workspace/hicss-2023")
 ```
 
 # Required Functions
 
 ```{r}
-# Required function for output and GOF analysis
 # Functions are adapted from tutorial for the Social Networks and Health 
 #   workshop at Duke University on May 18, 2018 by David R. Schaefer
+
 outTable <- function(x) {
   coef <- abs(x$theta)
   coefPretty <- sprintf("%.3f", round(coef,3))
@@ -42,37 +44,6 @@ outTable <- function(x) {
     Conv = convPretty))
   out2 <- paste("Maximum Convergence Ratio:", round(x$tconv.max,3))
   return(list(out1,out2))
-}
-
-# Functions required for GOF tests
-GeodesicDistribution <- function (i, data, sims, period, groupName,
-                                  varName, levls=c(1:5,Inf), cumulative=TRUE, ...) {
-  x <- networkExtraction(i, data, sims, period, groupName, varName)
-  require(sna)
-  a <- sna::geodist(symmetrize(x))$gdist
-  if (cumulative)
-  {
-    gdi <- sapply(levls, function(i){ sum(a<=i) })
-  }
-  else
-  {
-    gdi <- sapply(levls, function(i){ sum(a==i) })
-  }
-  names(gdi) <- as.character(levls)
-  gdi
-}
-
-# Holland and Leinhardt Triad Census; see ?sna::triad.census.
-TriadCensus <- function(i, data, sims, wave, groupName, varName, levls=1:16){
-  unloadNamespace("igraph") # to avoid package clashes
-  require(sna)
-  require(network)
-  x <- networkExtraction(i, data, sims, wave, groupName, varName)
-  if (network.edgecount(x) <= 0){x <- symmetrize(x)}
-  # because else triad.census(x) will lead to an error
-  tc <- sna::triad.census(x)[1,levls]
-  # names are transferred automatically
-  tc
 }
 ```
 
@@ -133,6 +104,16 @@ for (i in 1:8) {
 }
 ```
 
+#### Plot Single Affiliation Network
+
+```{r}
+g.layout <- gplot(apply(netArray, c(1,2), max), usearrows=T)
+par(mfrow=c(1,1))
+gplot(netArray[,,8], gmode="twomode",
+      arrowhead.cex=.75, edge.col='gray70', coord=g.layout, vertex.cex=1.5)
+```
+
+
 ### Dependency Network (One-Mode)
 
 ```{r}
@@ -178,17 +159,31 @@ deps_down   <- as.matrix(read.table('data/individual/pkg_downstream.txt'))
 depsUpVar   <- varCovar(deps_up, nodeSet = "pkgs")
 depsDownVar <- varCovar(deps_down, nodeSet = "pkgs")
 
+deps_up_log    <- log(deps_up + 1)
+deps_down_log  <- log(deps_down + 1)
+depsUpLogVar   <- varCovar(deps_up_log, nodeSet = "pkgs", centered = T) 
+depsDownLogVar <- varCovar(deps_down_log, nodeSet = "pkgs", centered = T)
+  
 # Community Interest
 com_int   <- as.matrix(read.table('data/individual/pkg_community.txt'))
 comIntVar <- varCovar(com_int, nodeSet = "pkgs")
+
+com_int_log  <- log(com_int + 1)
+comIntLogVar <- varCovar(com_int_log, nodeSet = "pkgs", centered = T)
 
 # Release Activity
 releases  <- as.matrix(read.table('data/individual/pkg_releases.txt'))
 relActVar <- varCovar(releases, nodeSet = "pkgs")
 
+releases_log <- log(releases + 1)
+relActLogVar <- varCovar(releases_log, nodeSet = "pkgs", centered = T)
+
 # Age
 age    <- as.matrix(read.table('data/individual/pkg_age.txt'))
 ageVar <- varCovar(age, nodeSet = "pkgs")
+
+age_log <- log(age)
+ageLogVar <- varCovar(age_log, nodeSet = "pkgs", centered = T)
 ```
 
 ### Developers
@@ -196,6 +191,9 @@ ageVar <- varCovar(age, nodeSet = "pkgs")
 ```{r}
 dev_act   <- as.matrix(read.table('data/individual/dev_activity.txt'))
 devActVar <- varCovar(dev_act, nodeSet = "devs")
+
+dev_act_log <- log(dev_act + 1)
+devActLogVar <- varCovar(dev_act_log, nodeSet = "devs", centered = T)
 ```
 
 ## Dyadic Variables
@@ -245,17 +243,16 @@ depDownDyad  <- varDyadCovar(depDownArray, nodeSets = c("devs", "pkgs"), type = 
 
 ```{r}
 # TODO Add dnet, but then the package sampling needs to be changed
-data <- sienaDataCreate(net, comp, devActVar,
-                        depsUpVar, depsDownVar, comIntVar, relActVar, ageVar,
+data <- sienaDataCreate(net, comp, devActLogVar,
+                        depsUpLogVar, depsDownLogVar, comIntLogVar, relActLogVar, ageLogVar,
                         depUpDyad, depDownDyad,
                         nodeSets = list(devs, pkgs))
 
 print01Report(data, modelname='hicss-2023')
 ```
 
-# Model Estimations
+# Model Selection
 
-## Baseline Model
 ```{r}
 algorithm <- sienaAlgorithmCreate(projname='hicss-2023')
 effects <- getEffects(data)
@@ -267,8 +264,375 @@ ans.model0 <- siena07(algorithm, data=data, effects=effects,
                       nbrNodes=12)
 
 outTable(ans.model0)
+
+wald0 <- Multipar.RSiena(ans.model0, 8)
+gof.string0 <- sprintf("%.2f (%d)", wald0$chisquare, wald0$df)
+
+texreg::htmlreg(ans.model0,
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list("Wald Statistics" = gof.string0),
+                file = 'tables/model0.html')
+
 saveRDS(ans.model0, file = "models/model0.rds")
 ```
+
+## Endogenous Effects
+
+```{r}
+effects <- setEffect(effects, inPopSqrt, name="net", include=T, test=F, fix=F)
+
+ans.model1 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+wald1 <- Multipar.RSiena(ans.model1, c(8:9))
+gof.string1 <- sprintf("%.2f (%d)", wald1$chisquare, wald1$df)
+
+outTable(ans.model1)
+texreg::htmlreg(list(ans.model0, ans.model1),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list("Wald Statistics" = c(gof.string0, gof.string1)),
+                file = 'tables/model1.html')
+saveRDS(ans.model1, file = "models/model1.rds")
+```
+
+```{r}
+effects <- setEffect(effects, inPopSqrt, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, outActSqrt, name="net", include=T, test=F, fix=F)
+
+ans.model2 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+wald2 <- Multipar.RSiena(ans.model2, c(8:10))
+gof.string2 <- sprintf("%.2f (%d)", wald2$chisquare, wald2$df)
+
+outTable(ans.model2)
+texreg::htmlreg(list(ans.model0, ans.model1, ans.model2),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(gof.string0, gof.string1, gof.string2)),
+                file = 'tables/model2.html')
+saveRDS(ans.model2, file = "models/model2.rds")
+```
+
+```{r}
+effects <- setEffect(effects, inPopSqrt, name="net", include=T, test=F, fix=F)
+# chi-square lower with outActSqrt
+effects <- setEffect(effects, outActSqrt, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, outInAss, name="net", include=T, test=F, fix=F)
+
+ans.model3 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+wald3 <- Multipar.RSiena(ans.model3, c(8:11))
+gof.string3 <- sprintf("%.2f (%d)", wald3$chisquare, wald3$df)
+
+outTable(ans.model3)
+texreg::htmlreg(list(ans.model0, ans.model1, ans.model2, ans.model3),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(gof.string0, gof.string1, gof.string2, gof.string3)),
+                file = 'tables/model3.html')
+saveRDS(ans.model3, file = "models/model3.rds")
+```
+
+```{r}
+effects <- setEffect(effects, inPopSqrt, name="net", include=T, test=F, fix=F)
+# chi-square lower with outActSqrt
+effects <- setEffect(effects, outActSqrt, name="net", include=T, test=F, fix=F)
+# chi-square lower with outInAss
+effects <- setEffect(effects, outInAss, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, cycle4, name="net", include=T, test=F, fix=F)  # Okayish, but does not add much value yet
+
+ans.model4 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+wald4 <- Multipar.RSiena(ans.model4, c(8:12))
+gof.string4 <- sprintf("%.2f (%d)", wald4$chisquare, wald4$df)
+
+outTable(ans.model4)
+texreg::htmlreg(list(ans.model0, ans.model1, ans.model2, ans.model3, ans.model4),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(
+                    gof.string0, gof.string1, gof.string2, gof.string3, gof.string4)),
+                file = 'tables/model4.html')
+saveRDS(ans.model4, file = "models/model4.rds")
+```
+
+## Exogenous Effects
+
+```{r}
+# Add control variables
+effects <- setEffect(effects, altX, name="net", interaction1="comIntLogVar",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, altX, name="net", interaction1="relActLogVar",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, altX, name="net", interaction1="ageLogVar",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, egoX, name="net", interaction1="devActLogVar",
+                     include=T, test=F, fix=F)
+
+ans.model5 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+
+wald5 <- Multipar.RSiena(ans.model5, c(8:16))
+gof.string5 <- sprintf("%.2f (%d)", wald5$chisquare, wald5$df)
+
+outTable(ans.model5)
+texreg::htmlreg(list(ans.model0, ans.model1, ans.model2, ans.model3, ans.model4, ans.model5),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(
+                    gof.string0, gof.string1, gof.string2, gof.string3, gof.string4, gof.string5)),
+                file = 'tables/model5.html')
+saveRDS(ans.model5, file = "models/model5.rds")
+```
+
+```{r}
+# High convergence value
+effects <- setEffect(effects, outActSqrt, name="net", include=F, test=F, fix=F)
+ans.model6 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+
+wald6 <- Multipar.RSiena(ans.model6, c(8:15))
+gof.string6 <- sprintf("%.2f (%d)", wald6$chisquare, wald6$df)
+
+outTable(ans.model6)
+texreg::htmlreg(list(ans.model0, ans.model1, ans.model2, ans.model3,
+                     ans.model4, ans.model5, ans.model6),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(
+                    gof.string0, gof.string1, gof.string2, gof.string3,
+                    gof.string4, gof.string5, gof.string6)),
+                file = 'tables/model6.html')
+saveRDS(ans.model6, file = "models/model6.rds")
+```
+
+```{r}
+# Add dyadic effects
+effects <- setEffect(effects, X, name="net", interaction1="depUpDyad",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, X, name="net", interaction1="depDownDyad",
+                     include=T, test=F, fix=F)
+
+ans.model7 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+
+wald7 <- Multipar.RSiena(ans.model7, c(8:17))
+gof.string7 <- sprintf("%.2f (%d)", wald7$chisquare, wald7$df)
+
+outTable(ans.model7)
+texreg::htmlreg(list(ans.model0, ans.model1, ans.model2, ans.model3,
+                     ans.model4, ans.model5, ans.model6, ans.model7),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(
+                    gof.string0, gof.string1, gof.string2, gof.string3,
+                    gof.string4, gof.string5, gof.string6, gof.string7)),
+                file = 'tables/model7.html')
+saveRDS(ans.model7, file = "models/model7.rds")
+```
+
+```{r}
+effects <- setEffect(effects, outActSqrt, name="net", include=T, test=F, fix=F)
+
+ans.model8 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+
+wald8 <- Multipar.RSiena(ans.model8, c(8:18))
+gof.string8 <- sprintf("%.2f (%d)", wald8$chisquare, wald8$df)
+
+outTable(ans.model8)
+texreg::htmlreg(list(ans.model0, ans.model1, ans.model2, ans.model3,
+                     ans.model4, ans.model5, ans.model6, ans.model7,
+                     ans.model8),
+                stars = c(0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(
+                    gof.string0, gof.string1, gof.string2, gof.string3,
+                    gof.string4, gof.string5, gof.string6, gof.string7,
+                    gof.string8)),
+                file = 'tables/model8.html')
+saveRDS(ans.model8, file = "models/model8.rds")
+```
+
+
+```{r}
+# Best Model
+# But not regarding Wald test
+ans.model.full <- readRDS("models/archive/full.rds")
+```
+
+
+## Guided Selection
+
+```{r}
+effects <- setEffect(effects, inPopSqrt, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, outActSqrt, name="net", include=F, test=F, fix=F)
+effects <- setEffect(effects, outInAss, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, cycle4, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, outRate, name="net", type="rate", include=F, test=F, fix=F)
+effects <- setEffect(effects, in2Plus, name="net", include=F, test=F, fix=F)
+effects <- setEffect(effects, in3Plus, name="net", include=F, test=F, fix=F)
+effects <- setEffect(effects, outIso, name="net", include=F, test=F, fix=F)
+effects <- setEffect(effects, outInv, name="net", include=F, test=F, fix=F)
+effects <- setEffect(effects, antiInIso, name="net", include=F, test=F, fix=F)
+
+ans.model1 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+summary(ans.model1)
+outTable(ans.model1)
+saveRDS(ans.model1, file = "models/endogenous_effects.rds")
+
+gof.id <- sienaGOF(ans.model1, verbose=TRUE, varName="net",
+                   IndegreeDistribution, join=T, cumulative=F)
+plot(gof.id)
+
+gof.od <- sienaGOF(ans.model1, verbose=TRUE, varName="net",
+                   OutdegreeDistribution, join=T, cumulative=F)
+plot(gof.od)
+```
+
+```{r}
+tt1 <- sienaTimeTest(ans.model1)
+summary(tt1)
+plot(tt1)
+```
+
+```{r}
+# Include Time Dummies and run again
+effects <- includeTimeDummy(effects, density, timeDummy = "4", include=T)
+effects <- includeTimeDummy(effects, cycle4, timeDummy = "all", include=T)
+effects <- includeTimeDummy(effects, inPop, timeDummy = "all", include=T)
+effects <- includeTimeDummy(effects, outAct, timeDummy = "5", include=T)
+effects <- includeTimeDummy(effects, outInAss, timeDummy = "all", include=T)
+
+ans.model1 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+
+summary(ans.model1)
+outTable(ans.model1)
+saveRDS(ans.model1, file = "models/endogenous_effects.rds")
+```
+
+
+```{r}
+effects <- setEffect(effects, altX, name="net", interaction1="comIntVar",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, altX, name="net", interaction1="relActVar",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, altX, name="net", interaction1="ageVar",
+                     include=T, test=F, fix=F)
+
+effects <- setEffect(effects, altX, name="net", interaction1="depsUpVar",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, altX, name="net", interaction1="depsDownVar",
+                     include=T, test=F, fix=F)
+
+# Include time dummies
+# effects <- includeTimeDummy(effects, density, timeDummy = "4", include=T)
+# effects <- includeTimeDummy(effects, cycle4, timeDummy = "all", include=T)
+# effects <- includeTimeDummy(effects, inPop, timeDummy = "2 3 4 5 7", include=T)
+# effects <- includeTimeDummy(effects, outAct, timeDummy = "5", include=T)
+# effects <- includeTimeDummy(effects, outInAss, timeDummy = "3 4", include=T)
+# effects <- includeTimeDummy(effects, altX, timeDummy = "2 3 4 7", name="net", interaction1="comIntVar", include=T)
+# effects <- includeTimeDummy(effects, altX, timeDummy = "all", name="net", interaction1="relActVar", include=T)
+
+ans.model2 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+
+summary(ans.model2)
+outTable(ans.model2)
+saveRDS(ans.model2, file = "models/exogenous_effects.rds")
+
+gof.id <- sienaGOF(ans.model2, verbose=TRUE, varName="net",
+                   IndegreeDistribution, join=T, cumulative=F)
+plot(gof.id)
+
+gof.od <- sienaGOF(ans.model2, verbose=TRUE, varName="net",
+                   OutdegreeDistribution, join=T, cumulative=F)
+plot(gof.od)
+```
+
+
+```{r}
+effects <- setEffect(effects, homXOutAct, name="net", interaction1="depsUpVar",
+                     include=F, test=F, fix=F)
+
+effects <- setEffect(effects, X, name="net", interaction1="depUpDyad",
+                     include=T, test=F, fix=F)
+effects <- setEffect(effects, X, name="net", interaction1="depDownDyad",
+                     include=T, test=F, fix=F)
+
+ans.model3 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+
+summary(ans.model3)
+outTable(ans.model3)
+saveRDS(ans.model3, file = "models/full.rds")
+
+gof.id <- sienaGOF(ans.model3, verbose=TRUE, varName="net",
+                   IndegreeDistribution, join=T, cumulative=F)
+plot(gof.id)
+
+gof.od <- sienaGOF(ans.model3, verbose=TRUE, varName="net",
+                   OutdegreeDistribution, join=T, cumulative=F)
+plot(gof.od)
+```
+
+
+### Preliminary GOF Tests
+
+```{r}
+gof.id <- sienaGOF(ans.model8, verbose=TRUE, varName="net",
+                   IndegreeDistribution, join=T, cumulative=F)
+plot(gof.id, violin=T)
+
+gof.od <- sienaGOF(ans.model8, verbose=TRUE, varName="net",
+                   OutdegreeDistribution, join=T, cumulative=F)
+plot(gof.od)
+```
+
+
+### Wald tests
+
+```{r}
+Multipar.RSiena(ans.model1, c(8:10))
+Multipar.RSiena(ans.model1, 8, 10)
+Multipar.RSiena(ans.model1, 8, 9, 11, 12)
+
+```
+
+### Time Heterogeneity
+
+```{r}
+# TODO Check and what does it mean?
+tt <- sienaTimeTest(ans.model1)
+
+summary(tt)
+plot(tt, pairwise=TRUE)
+plot(tt)
+```
+
+
+# Others Models
 
 ## Restricted Model
   
@@ -286,7 +650,7 @@ effects <- setEffect(effects, altX, name="net", interaction1="ageVar",
                      include=T, test=T, fix=T)
 
 # Developer-specific
-effects <- setEffect(effects, egoX, name="net", interaction1="devActVar",
+effects <- setEffect(effects, egoX, name="net", interaction1="devActVar",  # TODO Recalculate! 1 or 0 currently
                      include=T, test=T, fix=T)
 
 ans.model1.stt <- siena07(algorithm, data=data, effects=effects,
@@ -352,6 +716,8 @@ saveRDS(ans.model2, file = "models/model2.rds")
 Full model performs bad! Check effects separately
 - TODO: Add dyadic variables for up- and downstream dependencies
 
+### Selection
+
 ```{r}
 effects <- setEffect(effects, inPopSqrt, name="net", include=T, test=F, fix=F)
 effects <- setEffect(effects, outActSqrt, name="net", include=F, test=F, fix=F)
@@ -364,6 +730,20 @@ ans.model3 <- siena07(algorithm, data=data, effects=effects,
                       nbrNodes=12)
 outTable(ans.model3)
 saveRDS(ans.model3, file = "models/model3.rds")
+```
+
+```{r}
+effects <- setEffect(effects, inPopSqrt, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, outActSqrt, name="net", include=T, test=F, fix=F)
+effects <- setEffect(effects, outInAss, name="net", include=F, test=F, fix=F)  # Excluded
+effects <- setEffect(effects, cycle4, name="net", include=F, test=F, fix=F)
+effects <- setEffect(effects, outRate, name="net", type="rate", include=F, test=F, fix=F)
+
+ans.model4 <- siena07(algorithm, data=data, effects=effects,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      nbrNodes=12)
+outTable(ans.model4)
+saveRDS(ans.model4, file = "models/model4.rds")
 ```
 
 # Goodness-of-Fit
@@ -397,6 +777,15 @@ p5 <- plot(gof.od.model1)
                             OutdegreeDistribution, join=T, cumulative=F) )
 p6 <- plot(gof.od.model2)
 ```
+
+```{r}
+( gof.id.model3 <- sienaGOF(ans.model3, verbose=TRUE, varName="net",
+                            IndegreeDistribution, join=T, cumulative=F) )
+
+( gof.od.model3 <- sienaGOF(ans.model3, verbose=TRUE, varName="net",
+                            OutdegreeDistribution, join=T, cumulative=F) )
+```
+
 
 # HICSS 2022 Script
 
